// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BinaryPagination should render empty 1`] = `
<div
  className="BinaryPagination__PaginationContainer-sc-35l4ss-0 bnEHjt"
>
  <div
    className="BinaryPagination__PaginationItem-sc-35l4ss-1 fjGTlq"
  />
  <div
    className="BinaryPagination__PaginationItem-sc-35l4ss-1 ibbqOI"
  />
</div>
`;

exports[`BinaryPagination should render with data 1`] = `
<div
  className="BinaryPagination__PaginationContainer-sc-35l4ss-0 bnEHjt"
>
  <div
    className="BinaryPagination__PaginationItem-sc-35l4ss-1 fjGTlq"
  >
    <div
      data-mock="SideLinkItem"
    >
      {
  "direction": "prev",
  "to": "/prev",
  "title": "Prev title"
}
    </div>
  </div>
  <div
    className="BinaryPagination__PaginationItem-sc-35l4ss-1 ibbqOI"
  >
    <div
      data-mock="SideLinkItem"
    >
      {
  "direction": "next",
  "to": "/next",
  "title": "Next title"
}
    </div>
  </div>
</div>
`;

exports[`BinaryPagination should use slug if title not provided 1`] = `
<div
  className="BinaryPagination__PaginationContainer-sc-35l4ss-0 bnEHjt"
>
  <div
    className="BinaryPagination__PaginationItem-sc-35l4ss-1 fjGTlq"
  >
    <div
      data-mock="SideLinkItem"
    >
      {
  "direction": "prev",
  "to": "/prev",
  "title": "/prev"
}
    </div>
  </div>
  <div
    className="BinaryPagination__PaginationItem-sc-35l4ss-1 ibbqOI"
  >
    <div
      data-mock="SideLinkItem"
    >
      {
  "direction": "next",
  "to": "/next",
  "title": "/next"
}
    </div>
  </div>
</div>
`;

exports[`BinaryPagination shouldn't render without slug 1`] = `
<div
  className="BinaryPagination__PaginationContainer-sc-35l4ss-0 bnEHjt"
>
  <div
    className="BinaryPagination__PaginationItem-sc-35l4ss-1 fjGTlq"
  />
  <div
    className="BinaryPagination__PaginationItem-sc-35l4ss-1 ibbqOI"
  />
</div>
`;
